# modelcard-as-code-generator

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .mutmut  .pre-commit-config.yaml  .pydocstyle.ini  .secrets.baseline  .yamllint.yml  ACADEMIC_PUBLICATION_PACKAGE.md  AUTONOMOUS_SDLC_COMPLETE.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LICENSE_HEADER.txt  Makefile  NOVEL_ALGORITHMIC_CONTRIBUTIONS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  RESEARCH_PAPER_DRAFT.md  SDLC_IMPLEMENTATION_COMPLETE.md  SECURITY.md  TERRAGON_SDLC_AUTONOMOUS_COMPLETE.md  autonomous_sdlc_executor.py  create_test_samples.py  demo_quantum_leap.py  deploy_production.yml  docker-compose.prod.yml  docker-compose.yml  final_quality_validation.py  generate_documentation.py  (+25 more)
.devcontainer/: docker-compose.yml  post-create.sh  post-start.sh  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security.md
.github/workflows/: cd.yml  ci.yml  dependencies.yml  release.yml  security.yml
demo/: ENTERPRISE_MODEL_CARD.md  NLP_TEMPLATE.md
deployment/docker/: Dockerfile
deployment/global/ap-northeast-1/: deployment.yaml
deployment/global/ap-southeast-1/: deployment.yaml
deployment/global/eu-west-1/: deployment.yaml
deployment/global/us-east-1/: deployment.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  monitoring.yaml  namespace.yaml  service.yaml  storage.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_SETUP.md  COMPLIANCE_FRAMEWORK.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGIES.md  DEVELOPMENT.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MATURITY_ASSESSMENT.md  OPERATIONAL_EXCELLENCE.md  PERFORMANCE_OPTIMIZATION.md  RELEASE_AUTOMATION.md  REQUIREMENTS.md  ROADMAP.md  SETUP_REQUIRED.md  TESTING_STRATEGY.md  USAGE_EXAMPLES.md  USER_GUIDE.md  WORKFLOW_INTEGRATION.md  index.md
docs/adr/: 000-adr-template.md  001-template-engine-choice.md  002-security-architecture.md
docs/deployment/: docker.md
docs/github-workflows-templates/: chaos-engineering.yml  ci.yml  dependabot.yml  performance.yml  release.yml  security.yml
docs/guides/: developer-guide.md  quick-start.md  user-guide.md
docs/monitoring/: observability.md
docs/runbooks/: README.md  incident-high-error-rate.md
docs/workflows/: GITHUB_ACTIONS.md  README.md  WORKFLOW_SETUP_GUIDE.md
examples/: BASIC_MODEL_CARD.md  advanced_example.py  basic_example.py  batch_example.py
k8s/: deployment.yaml
kubernetes/production/: kustomization.yaml
monitoring/: alertmanager.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/rules/: modelcard-generator.yml
scripts/: build-automation.sh  build.sh  ci-deploy.sh  ci-test.sh  collect-metrics.py  deploy.py  generate-sbom.py  health-check-advanced.py  post-release.sh  prepare-release.sh  publish-release.sh  quality-check.sh  security-check.sh
scripts/automation/: dependency-update.py  health-check.py
security/: SECURITY.md  network-policy.yaml
src/modelcard_generator/: __init__.py  __main__.py  cli.py  executable.py
src/modelcard_generator/cli/: __init__.py  main.py
src/modelcard_generator/collectors/: __init__.py  base.py  config.py  evaluation.py  training.py
src/modelcard_generator/compliance/: __init__.py  checker.py
src/modelcard_generator/core/: __init__.py  adaptive_resilience.py  advanced_monitoring.py  async_executor.py  cache.py  cache_simple.py  circuit_breaker.py  config.py  distributed_cache.py  distributed_processing.py  drift_detector.py  enhanced_generator.py  enhanced_validation.py  exceptions.py  generator.py  global_deployment.py  intelligent_cache.py  intelligent_resource_manager.py  logging_config.py  model_card.py  models.py  performance_monitor.py  performance_optimizer.py  quantum_performance_optimizer.py  rate_limiter.py  resilience.py  resource_optimizer.py  retry.py  security.py  validator.py
src/modelcard_generator/deployment/: __init__.py  production_orchestrator.py
src/modelcard_generator/drift/: __init__.py  detector.py
src/modelcard_generator/formats/: __init__.py  eu_cra.py  google.py  huggingface.py
src/modelcard_generator/i18n/: __init__.py
src/modelcard_generator/integrations/: __init__.py  dvc_integration.py  mlflow_integration.py  wandb_integration.py  wandb_integration_enhanced.py
src/modelcard_generator/monitoring/: __init__.py  advanced_monitoring.py  enhanced_metrics.py  health.py  metrics.py
src/modelcard_generator/research/: __init__.py  advanced_optimizer.py  ai_content_engine.py  ai_content_generator.py  algorithm_optimizer.py  autonomous_executor.py  autonomous_research_engine.py  breakthrough_benchmarks.py  breakthrough_optimizer.py  insight_engine.py  neural_acceleration_engine.py  quantum_optimizer.py  research_analyzer.py
src/modelcard_generator/security/: __init__.py  advanced_scanner.py  enterprise_security.py  scanner.py
src/modelcard_generator/templates/: __init__.py  domain_specific.py  eu_cra.py  google.py  huggingface.py  library.py  registry.py
src/modelcard_generator/testing/: __init__.py  autonomous_quality_gates.py
src/modelcard_generator/validators/: __init__.py  validator.py
templates/: huggingface.j2
terraform/: main.tf
test_data/: CLI_TEST_CARD.md  ENHANCED_MODEL_CARD.md  model_card.jsonld
tests/: README.md  conftest.py  test_advanced_features.py  test_basic_functionality.py  test_runners.py
tests/config/: performance.yaml
tests/contract/: test_api_contracts.py
tests/fixtures/: sample_data.json
tests/integration/: test_cli_integration.py  test_full_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/property/: test_model_card_properties.py
tests/security/: __init__.py  test_security.py
tests/unit/: test_enhanced_generator.py  test_example.py
workflows/: README.md
